[tool.poetry]
name = "studioclock"
version = "1.1.0"
description = "TRSclock - The Tower Radio Studio Clock"
authors = ["hwalker928 <harry@harryw.link>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
tk = "^0.1.0"
tomli = "^2.0.1"
AzuracastPy = "^0.0.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
